--- a/index.html
+++ b/index.html
@@ -1,19 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Teal Text Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WalloDynamo</title>
     <style>
         body {
-            background-color: white;
+            font-family: Arial, sans-serif;
+            background-color: #fff;
+            color: #00796b; /* Keeping text color as specified */
+            text-align: center;
         }
-
-        h1, p {
-            color: teal;
+        h1 {
+            color: #004d40;
+            margin-bottom: 5px; /* Reduce space below the header */
+        }
+        p {
+            margin: 0; /* Removing default margin */
+        }
+        table {
+            padding-top: 60px;
+            width: 60%; /* Adjusted table width for better fit */
+            margin: 0 auto; /* Center the table */
+            border-collapse: collapse;
+        }
+        td {
+            width: 50%; /* Ensures equal width distribution for both columns */
+            padding: 15px; /* Adjusted padding for better spacing */
+            text-align: center; /* Centering text within the columns */
+            vertical-align: top;
+        }
+        a {
+            color: inherit; /* Keeping links in default color */
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        hr {
+            width: 60%; /* Matches the width of the table */
+            margin: 40px auto; /* Centers the horizontal line */
+        }
+        footer {
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #00796b; /* Matching color for footer separator */
+        }
+        .footer-note {
+            font-size: 0.8em;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Teal Text Website!</h1>
-    <p>This is a simple example of a website with teal text on a white background.</p>
+
+    <header>
+        <h1>Wallo Dynamo.</h1>
+        <p>Ongole<br>Official Home Page</p>
+        <hr>
+    </header>
+
+    <main>
+        <table>
+            <tr>
+                <td>
+                    <a href="message.html">Message from the Developer</a><br><br>
+                    <a href="instructions.html">Instructions</a><br><br>
+                    <a href="privacy.html">Privacy Policy</a><br><br>
+                    <a href="compatablity.html">Compatability</a><br><br>
+                    <a href="socialmedia.html">Social Media</a><br><br>
+                </td>
+                <td>
+                    <a href="download.html">Download App</a><br><br>
+                    <a href="toseelist.html">ToSeeList</a><br><br>
+                    <a href="specials.html">Specials</a><br><br>
+                    <a href="intervals.html">Intervals</a><br><br>
+                    <a href="updates.html">Updates of app</a><br><br>
+                </td>
+            </tr>
+        </table>
+    </main>
+
+    <footer>
+        <p>For inquiries, contact us at wallodynamo@gmail.com</p>
+        <div class="footer-note">
+            <p>Very Happy to see you Here Put a smile on Your face</p>
+        </div>
+    </footer>
+
 </body>
 </html>
