--- a/download.html
+++ b/download.html
@@ -46,7 +46,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Download Wallodynamoright</h1>
+        <h1>Download WalloDynamo</h1>
+        <p><b>This app is not at all harmfull works without internet also you can download it</b></p>
         <p>Click the button below to download our app and start enjoying its features!</p>
         <p>Make sure to enable installation from unknown sources in your device settings if prompted.</p>
         <a class="download-button" href="WalloDynamo.apk" download="WalloDynamo.apk">Download Now</a>
