--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
 
     <header>
-        <h1>Wallo Dynamo.</h1>
+        <h1>Wallo Dynamo</h1>
         <p>Ongole<br>Official Home Page</p>
         <hr>
     </header>
