--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             text-decoration: underline;
         }
         a:hover {
-            text-decoration: none;
+            text-decoration: underline;
         }
         hr {
             width: 60%; /* Matches the width of the table */
@@ -55,7 +55,7 @@
 <body>
 
     <header>
-        <h1>Wallo Dynamo</h1>
+        <h1>Wallo Dynamo.</h1>
         <p>Ongole<br>Official Home Page</p>
         <hr>
     </header>
