--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <table>
             <tr>
                 <td>
-                    <a href="message.html">Message from the Developer</a><br><br>
+                    <a href="message.html">Developer's Message</a><br><br>
                     <a href="instructions.html">Instructions</a><br><br>
                     <a href="privacy.html">Privacy Policy</a><br><br>
                     <a href="compatablity.html">Compatability</a><br><br>
