--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
     <header>
         <h1>WalloDynamo</h1>
         <p>Ongole<br>Official Home Page</p>
+        <p id="visitor-count">Visits done: Loading...</p>
         <hr>
-        <p id="visitor-count">Visitors: Loading...</p>
+        
     </header>
 
     <main>
