--- a/privacy.html
+++ b/privacy.html
@@ -1,70 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Wallodynamoright</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #00796b;
-        }
-        h2 {
-            color: #00796b;
-        }
-        p {
-            line-height: 1.6;
-        }
-        ul {
-            margin: 10px 0;
-            padding-left: 20px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WallDynamo Privacy Policy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: black;
+      margin: 20px;
+      padding: 20px;
+    }
+    h1 {
+      color: #004d40; /* Dark Teal */
+    }
+    h2 {
+      color: #00796b; /* Light Teal */
+    }
+    p, li {
+      color: black;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    .container {
+      background-color: white;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Privacy Policy</h1>
-        <p>Effective Date: 25-9-2024</p>
 
-        <h2>Introduction</h2>
-        <p>Welcome to Wallodynamoright! Your privacy is important to us. This Privacy Policy outlines how we handle your information when you use our application.</p>
+<div class="container">
+  <h1>Privacy Policy for WallDynamo</h1>
 
-        <h2>Information We Do Not Collect</h2>
-        <p>We do not collect any personal information from users. You can use our app without providing any information, and we do not store any of your data on our servers.</p>
+  <p>Effective Date: [Date]</p>
 
-        <h2>Third-Party Services</h2>
-        <p>We do not involve any third parties in the operation of our app. All functionalities are handled internally without sharing your information with external entities.</p>
+  <p>At WallDynamo, we prioritize the privacy and security of our users' data. This Privacy Policy outlines how we collect, use, and store your information when you use the WallDynamo app ("the App"). By using WallDynamo, you agree to the practices described in this policy.</p>
 
-        <h2>Offline Usage</h2>
-        <p>Our app can always be used without an internet connection. You can enjoy all features and functionalities offline, ensuring your experience is not dependent on connectivity.</p>
+  <h2>1. Information We Collect</h2>
 
-        <h2>Background Operation</h2>
-        <p>To enhance user experience, the app may need to run in the background. This allows for continuous operation and access to features without interruption.</p>
+  <h3>Images</h3>
+  <p>The App collects images that you upload from your device for the purpose of setting them as wallpapers. These images are stored <strong>locally</strong> on your device and are never transmitted to external servers or third parties.</p>
 
-        <h2>Image Storage</h2>
-        <p>The app only stores images in your device's AsyncStorage. These images remain on your device and are not uploaded or shared elsewhere.</p>
+  <h3>Device Information</h3>
+  <p>We may collect basic information such as device type, operating system, and app usage data. This is used to help improve the app’s performance and troubleshoot any issues.</p>
 
-        <h2>Changes to This Privacy Policy</h2>
-        <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+  <h3>App Usage Data</h3>
+  <p>We collect information on how you interact with the App’s features, such as selecting images, setting wallpapers, and configuring intervals. This data is stored locally and is used solely to ensure that your preferences are applied.</p>
 
-        <h2>Contact Us</h2>
-        <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-        <p>Email: wallodynamo@gmail.com</p>
-    </div>
+  <h2>2. How We Use Your Information</h2>
+
+  <h3>ToSeeList</h3>
+  <p>You can select an image and assign a specific time of the day for that image to be set as the wallpaper. The selected image and time are stored locally and used to automatically update your wallpaper at the chosen time.</p>
+
+  <h3>Specials</h3>
+  <p>This feature allows you to set images for specific dates. The App will automatically change your wallpaper to the selected image on the designated date. These images and dates are stored locally on your device.</p>
+
+  <h3>Intervals</h3>
+  <p>You can upload multiple images and set a time interval for periodic wallpaper changes. When enabled, the App will continuously rotate through your selected images, changing your wallpaper at the chosen interval. The images and interval settings are stored locally on your device.</p>
+
+  <h2>3. Data Storage and Security</h2>
+  <p>All images, times, and dates are stored on your device using local storage (e.g., `AsyncStorage`). The App does not upload or share your data with external servers or third parties.</p>
+  <p>While the App takes reasonable steps to protect the data stored on your device, we recommend using device-level security features (e.g., lock screens, passwords) to further safeguard your data.</p>
+
+  <h2>4. Permissions</h2>
+  <ul>
+    <li><strong>Access to Photos/Media:</strong> This permission allows you to select images from your device’s gallery to set as wallpapers.</li>
+    <li><strong>Storage Access:</strong> This is required to save your selected images, wallpaper schedules, and settings locally on your device.</li>
+    <li><strong>Background Service Access:</strong> The App uses <em>Work Manager</em> to enable periodic wallpaper changes based on your selected intervals, even when the App is not actively running.</li>
+  </ul>
+
+  <h2>5. Third-Party Services</h2>
+  <p>WallDynamo does not share or transmit your data to third-party services. All data remains on your local device.</p>
+
+  <h2>6. Your Rights</h2>
+  <p>You retain full control over the images and preferences stored in the App:</p>
+  <ul>
+    <li><strong>Delete Images:</strong> You can delete any uploaded image by long-pressing it within the App and selecting the “Delete” option.</li>
+    <li><strong>Clear App Data:</strong> To remove all stored images, times, and intervals, you can delete the App or clear its data from your device’s settings.</li>
+  </ul>
+
+  <h2>7. Changes to This Privacy Policy</h2>
+  <p>We may update this Privacy Policy from time to time to reflect changes in our practices or for operational, legal, or regulatory reasons. We will notify you of any significant changes within the App. The updated policy will include the new effective date.</p>
+
+  <h2>8. Contact Us</h2>
+  <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
+  <ul>
+    <li>Email: [Your Email Address]</li>
+    <li>Address: [Your Company Address, if applicable]</li>
+  </ul>
+</div>
+
 </body>
 </html>
