--- a/privacy.html
+++ b/privacy.html
@@ -90,8 +90,8 @@
   <h2>8. Contact Us</h2>
   <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
   <ul>
-    <li>Email: [Your Email Address]</li>
-    <li>Address: [Your Company Address, if applicable]</li>
+    <li>Email: wallodynamo@gmail.com</li>
+    <li>Address:Ongole</li>
   </ul>
 </div>
 
