--- a/privacy.html
+++ b/privacy.html
@@ -37,9 +37,9 @@
 <div class="container">
   <h1>Privacy Policy for WallDynamo</h1>
 
-  <p>Effective Date: [Date]</p>
+  <p>03-10-2024</p>
 
-  <p>At WallDynamo, we prioritize the privacy and security of our users' data. This Privacy Policy outlines how we collect, use, and store your information when you use the WallDynamo app ("the App"). By using WallDynamo, you agree to the practices described in this policy.</p>
+  <p>At WallDynamo, we prioritize the privacy and security of our users' data. This Privacy Policy outlines how we collect, use, and store your information when you use the WallDynamo app. By using WallDynamo, you agree to the practices described in this policy.</p>
 
   <h2>1. Information We Collect</h2>
 
